--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
   <link rel="stylesheet" href="style.css">
   </head>
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PP2FRCMYS1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PP2FRCMYS1');
+</script>
+
   <body>
     <h1 style="text-align:center;margin-top:50px;">ICD-10 Code Search</h1>
     <div style="display:flex;justify-content:center;">
