--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <title>ICD-10 Lookup</title>
+  <link rel="icon" type="image/x-icon" href="/img/favicon-32.png">
   <link rel="stylesheet" href="style.css">
   </head>
   
